--- a/drivers/ide/Kconfig
+++ b/drivers/ide/Kconfig
@@ -219,6 +219,15 @@ config IDE_TASK_IOCTL
 
 	  If you are unsure, say N here.
 
+config IDE_TASKFILE_IO
+	bool 'IDE Taskfile IO'
+	depends on BLK_DEV_IDE
+	default y
+	---help---
+	  Use new taskfile IO code.
+
+	  It is safe to say Y to this question, in most cases.
+
 comment "IDE chipset support/bugfixes"
 	depends on BLK_DEV_IDE
 
