--- a/arch/sh/Kconfig
+++ b/arch/sh/Kconfig
@@ -722,7 +722,7 @@ config HOTPLUG
 
 source "drivers/pcmcia/Kconfig"
 
-source "drivers/hotplug/Kconfig"
+source "drivers/pci/hotplug/Kconfig"
 
 endmenu
 
